fix thumbnails sqaushing/stretching

--- a/docs/sass/_themes.scss
+++ b/docs/sass/_themes.scss
@@ -33,6 +33,7 @@
     img {
       width: 100%;
       height: 90%;
+      object-fit: cover;
     }
 
     span {
